--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://i0rgccmrx3at3wv3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ntzuwbwx7b4ja668?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10465320
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
-spring.datasource.username=unn9sv6eyjb260o8
-spring.datasource.password=iaczpxbz3giad6hf
+spring.datasource.username=sql10465320
+spring.datasource.password=hKjQpWaldM
 
 #[Opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
 spring.jpa.show-sql = true
