modificacion del properties a un MySql remoto 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,11 @@ spring.datasource.username=sql10465320
 spring.datasource.password=hKjQpWaldM
 
 #[Opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 
 #[Opcional]Crea las tablas.
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.initialization-mode=always
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.initialization-mode=always
 
 #cambiar puerto
 #server.port=8090
