--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,18 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10465320
+spring.datasource.url=jdbc:mysql://localhost:3306/springaplication
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
-spring.datasource.username=sql10465320
-spring.datasource.password=hKjQpWaldM
+spring.datasource.username=root
+spring.datasource.password=
 
 #[Opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
 #spring.jpa.show-sql = true
 
 #[Opcional]Crea las tablas.
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.initialization-mode=always
 
 #cambiar puerto
-#server.port=8090
+server.port=8090
